--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
+    "bootstrap": "5.3.0",
+    "cookie": "^0.5.0",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.18",
+    "node-fetch": "^2.6.12",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0"
   }
 }
